[package]
name = "any-arena"
version = "0.0.1"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/pczarn/any-arena"
description = """
A reflection-based arena which can allocate objects of any type.
"""

[lib]
name = "any_arena"
path = "src/lib.rs"
